# harma-rs

./: .gitignore  README.md
.github/: dependabot.yaml
.github/workflows/: rust.yml
notepad/: Cargo.toml  README.md
notepad/examples/: plot.rs  print.rs  scratchpad.rs
notepad/src/: comms.rs  lib.rs  mock_serial.rs  types.rs
pensel/: Cargo.toml  README.md  build.rs  m0-memory.x  m4-memory.x  memory.x
pensel-types/: Cargo.toml
pensel-types/src/: lib.rs
pensel/.cargo/: config  config.toml
pensel/src/: cli.rs  imu.rs  lib.rs  main.rs  prelude.rs  usb_serial.rs  usb_serial_log.rs  usbserial.rs
pensel/src/bal/: m0.rs  m4.rs  mod.rs
