[package]
authors = ["Tyler Holmes <tyler@holmesengineering.com>"]
readme = "README.md"
name = "notepad"
version = "0.1.0"
edition = "2018"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
serialport = "4"
mint = "0.5"
heapless = "0.7"

[dependencies.pensel-types]
path = "../pensel-types"

[dev-dependencies]
textplots = "0.8"
rgb = "0.8"
console = "0.14"
ctrlc = "3"
