[package]
authors = ["Tyler Holmes <tyler@holmesengineering.com>"]
readme = "README.md"
name = "notepad"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
serialport = "4"
heapless = "0.7"
log = "0.4"

# bin dependencies
textplots = "0.8"
rgb = "0.8"
console = "0.15"
ctrlc = "3"
clap = "3"
simple_logger = "2"

[dependencies.pensel-types]
path = "../pensel-types"
