[package]
authors = ["Tyler Holmes <tyler@holmesengineering.com>"]
edition = "2018"
readme = "README.md"
name = "pensel"
version = "0.1.0"
description = "Orientation tracking pensel, mainly for robot assisted soldering"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-persist = "0.2"
menu = "0.3"
embedded-hal = "0.2"
chek = "0.1"

# dependencies for usb serial printing
usb-device = "0.2"
usbd-serial = "0.1"
heapless = "0.7"

[dependencies.pensel-types]
path = "../pensel-types"

[dependencies.feather_m0]
features = ["unproven", "usb"]
git = "https://github.com/atsamd-rs/atsamd/"
# version = "0.9"

[features]
default = []

[profile.release]
debug = true        # symbols are nice and they don't increase the size on Flash
opt-level = "z"     # optimize for size
codegen-units = 1   # better optimization per-crate
lto = true          # optimize at link time across all crates

[profile.dev]
debug = true        # symbols are nice and they don't increase the size on Flash
opt-level = 1       # some light optimization to get better size
codegen-units = 1   # better optimization per-crate
