[package]
authors = ["Tyler Holmes <tyler@holmesengineering.com>"]
edition = "2018"
readme = "README.md"
name = "pensel"
version = "0.1.0"
description = "Orientation tracking pensel, mainly for robot assisted soldering"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-persist = "0.3"
menu = "0.3"
embedded-hal = "0.2"
chek = "0.1"

# dependencies for usb serial printing
usb-device = "0.2"
usbd-serial = "0.1"
heapless = "0.7"
log = "0.4"

[dependencies.pensel-types]
path = "../pensel-types"

[dependencies.feather_m0]
features = ["unproven", "usb"]
git = "https://github.com/atsamd-rs/atsamd/"
optional = true

[dependencies.feather_m4]
features = ["unproven", "usb"]
git = "https://github.com/atsamd-rs/atsamd/"
optional = true

[features]
default = ["feather-m4"]
feather-m0 = ["feather_m0"]
feather-m4 = ["feather_m4"]

[profile.release]
debug = true        # symbols are nice and they don't increase the size on Flash
opt-level = "z"     # optimize for size
codegen-units = 1   # better optimization per-crate
lto = true          # optimize at link time across all crates

[profile.dev]
debug = true        # symbols are nice and they don't increase the size on Flash
opt-level = 1       # some light optimization to get better size
codegen-units = 1   # better optimization per-crate
